--- a/index.html
+++ b/index.html
@@ -1,156 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="ltr" lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
-  <title>Support freeCodeCamp's open source community with a donation by donating to our nonprofit</title>
-  <link href="http://freecodecamp.org" rel="canonical">
-  <meta charset="utf-8">
-  <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
-  <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." property="og:title">
-  <meta content="freeCodeCamp" property="og:site_name">
-  <meta content="on" name="twitter:widgets:csp">
-  <meta content="d0bc047a482c03c24f1168004c2a216a" name="p:domain_verify">
-  <meta content="https://www.freecodecamp.org" property="og:url">
-  <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." property="og:description">
-  <meta content="https://s3.amazonaws.com/freecodecamp/curriculum-diagram-full.jpg" property="og:image">
-  <meta content="article" property="og:type">
-  <meta content="https://www.facebook.com/freecodecamp" property="article:publisher">
-  <meta content="Responsive" property="article:section">
-  <link href="https://plus.google.com/+Freecodecamp" rel="publisher">
-  <link href="https://plus.google.com/+Freecodecamp" rel="author">
-  <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." name="description">
-  <meta content="@freecodecamp" name="twitter:creator">
-  <meta content="http://www.freecodecamp.org" name="twitter:url">
-  <meta content="@freecodecamp" name="twitter:site">
-  <meta content="summary_large_image" name="twitter:card">
-  <meta content="https://s3.amazonaws.com/freecodecamp/curriculum-diagram-full.jpg" name="twitter:image:src">
-  <meta content="Learn to code and help nonprofits" name="twitter:title">
-  <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." name="twitter:description">
-  <meta content="a40ee5d5dba3bb091ad783ebd2b1383f" name="p:domain_verify">
-  <meta content="#FFFFFF" name="msapplication-TileColor">
-  <meta content="/" name="msapplication-TileImage">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-144x144.png" rel="android-chrome" sizes="144x144">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-192x192.png" rel="android-chrome" sizes="192x192">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-36x36.png" rel="android-chrome" sizes="36x36">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-48x48.png" rel="android-chrome" sizes="48x48">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-72x72.png" rel="android-chrome" sizes="72x72">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-96x96.png" rel="android-chrome" sizes="96x96">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-manifest.json" rel="android-chrome-manifest">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon.png" rel="apple-touch-icon">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-16x16.png" rel="favicon" sizes="16x16">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-32x32.png" rel="favicon" sizes="32x32">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-96x96.png" rel="favicon" sizes="96x96">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-144x144.png" rel="mstile" sizes="144x144">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-150x150.png" rel="mstile" sizes="150x150">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-310x310.png" rel="mstile" sizes="310x310">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-310x150.png" rel="mstile" sizes="310x150">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-70x70.png" rel="mstile" sizes="70x70">
-  <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="favicon">
-  <link href="//s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="shortcut icon">
-  <link href="style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
+    <title>Support freeCodeCamp's open source community with a donation by donating to our nonprofit</title>
+    <link href="http://freecodecamp.org" rel="canonical">
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="X5tHeKjV-jMLyp4VMoUhW9PAYaOjtPslV250" name="csrf-token">
+    <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." property="og:title">
+    <meta content="freeCodeCamp" property="og:site_name">
+    <meta content="on" name="twitter:widgets:csp">
+    <meta content="d0bc047a482c03c24f1168004c2a216a" name="p:domain_verify">
+    <meta content="https://www.freecodecamp.org" property="og:url">
+    <meta content="Learn to code with free online courses, programming projects, and interview preparation for developer jobs." property="og:description">
+    <meta content="https://s3.amazonaws.com/freecodecamp/curriculum-diagram-full.jpg" property="og:image">
+    <meta content="article" property="og:type">
+    <meta content="https://www.facebook.com/freecodecamp" property="article:publisher">
+    <meta content="Responsive" property="article:section">
+    <link href="https://plus.google.com/+Freecodecamp" rel="publisher">
+    <link href="https://plus.google.com/+Freecodecamp" rel="author">
+    <meta content="Help support our open source project community as we learn to code and help non-profits. " name="description">
+    <meta content="a40ee5d5dba3bb091ad783ebd2b1383f" name="p:domain_verify">
+    <meta content="http://www.freecodecamp.org" name="twitter:url">
+    <meta content="@freecodecamp" name="twitter:creator">
+    <meta property="og:image" content="https://raw.githubusercontent.com/freeCodeCamp/assets/master/assets/logos/fcc_puck600.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@freecodecamp" />
+    <meta name="twitter:title" content="Donate to freeCodeCamp.org" />
+    <meta name="twitter:description" content="Help support our open source project community as we learn to code and help non-profits. " />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/freeCodeCamp/assets/master/assets/logos/fcc_puck600.png" />
+    <meta content="#FFFFFF" name="msapplication-TileColor">
+    <meta content="/" name="msapplication-TileImage">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-144x144.png" rel="android-chrome" sizes="144x144">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-192x192.png" rel="android-chrome" sizes="192x192">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-36x36.png" rel="android-chrome" sizes="36x36">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-48x48.png" rel="android-chrome" sizes="48x48">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-72x72.png" rel="android-chrome" sizes="72x72">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-96x96.png" rel="android-chrome" sizes="96x96">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/android-chrome-manifest.json" rel="android-chrome-manifest">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-114x114.png" rel="apple-touch-icon" sizes="114x114">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-144x144.png" rel="apple-touch-icon" sizes="144x144">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon-precomposed.png" rel="apple-touch-icon-precomposed">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-16x16.png" rel="favicon" sizes="16x16">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-32x32.png" rel="favicon" sizes="32x32">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon-96x96.png" rel="favicon" sizes="96x96">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-144x144.png" rel="mstile" sizes="144x144">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-150x150.png" rel="mstile" sizes="150x150">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-310x310.png" rel="mstile" sizes="310x310">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-310x150.png" rel="mstile" sizes="310x150">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/mstile-70x70.png" rel="mstile" sizes="70x70">
+    <link href="https://s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="favicon">
+    <link href="//s3.amazonaws.com/freecodecamp/favicons/favicon.ico" rel="shortcut icon">
+    <link href="/bundle.css" rel="stylesheet">
+    <meta content="width=device-width,initial-scale=1" name="viewport">
 </head>
-<body class="top-and-bottom-margins">
-  <script>
-  (function(i,s,o,g,r,a,m){ i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-55446531-7', 'auto');
-  ga('require', 'GTM-KRCFSTQ');
-  ga('require', 'displayfeatures');
-  ga('send', 'pageview');
-  </script><!-- Leave the below lines alone!-->
-  <nav class="navbar navbar-default navbar-fixed-top nav-height">
-    <div class="navbar-header">
-      <a class="navbar-brand"><img alt="learn to code javascript at freeCodeCamp logo" class="img-responsive nav-logo" src="https://s3.amazonaws.com/freecodecamp/freecodecamp_logo.svg"></a>
-    </div>
-    <div class="return-to-free-code-camp">
-      <ul class="nav navbar-nav navbar-right">
-      </ul>
-    </div>
-  </nav>
-  <div class="container">
-    <div class="row flashMessage negative-30">
-      <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3"></div>
-    </div>
-  </div>
-  <div class="container text-center">
-    <h1>Become a Supporter.</h1>
-    <h4>freeCodeCamp is a small nonprofit that helps you learn to code for free.</h4> 
-    <h4>You can learn from thousands of videos, articles, and interactive coding challenges.</h4>
-    <h4>You can also join one of thousands of local study groups worldwide.</h4> 
-    <h4>And we're just getting started.</h4>
-    <h4>Help us pay for servers and other costs. Set up a monthly donation you can afford:</h4>
-    <div class="spacer"></div>
-    <div class="hidden-xs hidden-sm">
-      <div class="row">
-        <div class="col-xs-1"></div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 3 });" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'>
-          </form>
-        </div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 10 });" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'>
-          </form>
-        </div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 35 });" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'>
-          </form>
-        </div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 50 });" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'>
-          </form>
-        </div>
-        <div class="col-xs-2">
-          <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 250 });" target="_blank">
-            <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'>
-          </form>
-        </div>
-        <div class="col-xs-1"></div>
-      </div>
-    </div>
-    <div class="hidden-md hidden-lg">
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 3 } );" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="C72UGKXK4786L"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$3'>
-      </form>
-      <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 10} );" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="BYEBQEHS5LHNC"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$10'>
-      </form>
-      <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send',  { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 35} );" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="57ZPMKJ8G893Y"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$35'>
-      </form>
-      <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 50} );" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="2ZVYTHK6Q7AFW"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$50'>
-      </form>      
-      <div class="spacer"></div>
-      <form action="//www.paypal.com/cgi-bin/webscr" method="post" onsubmit="ga('send', { hitType: 'event', eventCategory: 'donation', eventAction: 'click', eventLabel: 'paypal', eventValue: 250} );" target="_blank">
-        <input name="cmd" type="hidden" value="_s-xclick"> <input name="hosted_button_id" type="hidden" value="69JGTY4DHSTEN"> <input class="btn btn-cta signup-btn btn-block" name="submit" type="submit" value='$250'>
-      </form>
-    </div>
-    <h2 class="text-center">Thanks for your support!</h2>
-    <div class="spacer"></div>
-  </div>
+<body>
+<script>
+    (function(i,s,o,g,r,a,m){ i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-55446531-7', 'auto');
+    ga('require', 'GTM-KRCFSTQ');
+    ga('require', 'displayfeatures');
+    ga('send', 'pageview');
+</script>
+<script src="/bundle.js"></script>
 </body>
 </html>
